--- a/apps/simple-auth/Gemfile
+++ b/apps/simple-auth/Gemfile
@@ -3,6 +3,7 @@ ruby '2.2.2'
 gem 'rails', '4.2.1'
 gem 'sqlite3'
 gem 'jbuilder', '~> 2.0'
+gem 'rack-cors'
 group :development, :test do
   gem 'sass-rails', '~> 5.0'
   gem 'jquery-rails'
